test/tests/stages/9_functions/valid/extra_credit/goto_shared_name.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[30]:
  int
  identifier(foo)
  (
  void
  )
  {
  goto
  identifier(foo)
  ;
  return
  const int(0)
  ;
  identifier(foo)
  :
  return
  const int(1)
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  return
  identifier(foo)
  (
  )
  ;
  }
