test/tests/stages/9_functions/invalid_declarations/extra_credit/compound_assign_to_fun_call.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[22]:
  int
  identifier(x)
  (
  void
  )
  ;
  int
  identifier(main)
  (
  void
  )
  {
  identifier(x)
  (
  )
  +=
  const int(1)
  ;
  return
  const int(0)
  ;
  }
